--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "js-cookie": "^2.2.1",
     "lodash": "^4.17.21",
     "vue": "^2.6.11",
+    "vue-codeditor": "^1.0.5",
+    "vue-codemirror": "^4.0.6",
+    "vue-quill-editor": "^3.0.6",
     "vue-router": "^3.2.0",
     "vuetify": "^2.4.0",
     "vuex": "^3.4.0"
