--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "vue-codemirror": "^4.0.6",
     "vue-quill-editor": "^3.0.6",
     "vue-router": "^3.2.0",
+    "vuedraggable": "^2.24.3",
     "vuetify": "^2.4.0",
     "vuex": "^3.4.0"
   },
