--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "core-js": "^3.6.5",
     "js-cookie": "^2.2.1",
     "lodash": "^4.17.21",
+    "moment": "^2.29.1",
     "vue": "^2.6.11",
     "vue-codeditor": "^1.0.5",
     "vue-codemirror": "^4.0.6",
