--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
   },
   "dependencies": {
     "axios": "^0.21.1",
+    "chess.js": "^0.12.0",
+    "chessboardjs-vue": "^1.0.9",
+    "chessground": "^8.1.7",
     "core-js": "^3.6.5",
     "js-cookie": "^2.2.1",
     "lodash": "^4.17.21",
